--- a/point-core/build.gradle
+++ b/point-core/build.gradle
@@ -16,5 +16,8 @@ dependencies {
 
     runtimeOnly("com.h2database:h2")
 
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
+
     testImplementation('com.h2database:h2')
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
