--- a/point-core/build.gradle
+++ b/point-core/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.springframework.boot'
+    id 'java-test-fixtures'
 }
 
 apply plugin: "java-library"
@@ -20,4 +21,5 @@ dependencies {
 
     testImplementation('com.h2database:h2')
     testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testFixturesImplementation("org.springframework.boot:spring-boot-starter-test")
 }
