feat: PointMessage 도메인 객체 생성

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ configure(commonSubProjects) {
     targetCompatibility = 17
 
     dependencies {
+        compileOnly("com.google.code.findbugs:jsr305:3.0.2")
         compileOnly("org.projectlombok:lombok")
         annotationProcessor("org.projectlombok:lombok")
 
