--- a/point-api/build.gradle
+++ b/point-api/build.gradle
@@ -5,4 +5,6 @@ dependencies {
 
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-validation")
+
+    testImplementation(testFixtures(project(":point-core")))
 }
