--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
 allprojects {
     repositories {
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -17,6 +18,7 @@ def commonSubProjects = [
         project(":point-api"),
         project(":point-worker"),
         project(":point-batch"),
+        project(":clients"),
 ]
 
 configure(commonSubProjects) {
@@ -39,7 +41,15 @@ configure(commonSubProjects) {
         implementation("org.springframework.boot:spring-boot-starter-logging")
 
         testImplementation("org.springframework.boot:spring-boot-starter-test")
-//        testImplementation(testFixtures(project(":point-core")))
+        testImplementation(testFixtures(project(":point-core")))
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:2021.0.3")
+            mavenBom("io.awspring.cloud:spring-cloud-aws-dependencies:2.4.2")
+            mavenBom("com.amazonaws:aws-java-sdk-bom:1.12.262")
+        }
     }
 
     // jacoco
@@ -68,20 +78,3 @@ configure(commonSubProjects) {
         }
     }
 }
-
-//group 'com.github.kukim'
-//version '1.0-SNAPSHOT'
-
-//repositories {
-//    mavenCentral()
-//}
-
-//dependencies {
-//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-//}
-//
-//test {
-//    useJUnitPlatform()
-//}
-
