feat: point-api 포인트 적립

--- a/clients/src/main/resources/application-aws-sqs.yml
+++ b/clients/src/main/resources/application-aws-sqs.yml
@@ -24,6 +24,12 @@ sqs:
       deadLettersQueue:
         name: "point-command-dlq"
         maxReceiveCount: 5
+aws:
+  sqs:
+    queue:
+      point-command: 'point-command'
+      point-command-dlq: 'point-command-dlq'
+
 ---
 spring:
   config:
