--- a/point-worker/build.gradle
+++ b/point-worker/build.gradle
@@ -2,6 +2,7 @@ description("api-worker module")
 
 dependencies {
     implementation(project(":point-core"))
+    implementation(project(":clients"))
 
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-validation")
