feat: clients-redis 멀티모듈설정과 Embedded Redis Cluster 추가

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ def commonSubProjects = [
         project(":point-api"),
         project(":point-worker"),
         project(":point-batch"),
-        project(":clients"),
+        project(":clients:aws-sqs"),
+        project(":clients:redis"),
 ]
 
 configure(commonSubProjects) {
