--- a/point-api/build.gradle
+++ b/point-api/build.gradle
@@ -2,7 +2,8 @@ description("point-api module")
 
 dependencies {
     implementation(project(":point-core"))
-    implementation(project(":clients"))
+    implementation(project(":clients:aws-sqs"))
+    implementation(project(":clients:redis"))
 
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-validation")
