--- a/point-core/build.gradle
+++ b/point-core/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     api("org.springframework.boot:spring-boot-starter")
     api("org.springframework.boot:spring-boot-starter-data-jpa")
     api("org.springframework.boot:spring-boot-starter-validation")
+    api("org.springframework.boot:spring-boot-starter-data-redis")
+    api("com.github.tarossi:embedded-redis:1.5.2")
 
     runtimeOnly("com.h2database:h2")
 
