--- a/point-core/src/main/resources/application-db.yml
+++ b/point-core/src/main/resources/application-db.yml
@@ -22,7 +22,7 @@ spring:
     activate:
       on-profile: db-local,db-test
   datasource:
-    url: jdbc:h2:mem:fx-provider;MODE=MySQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+    url: jdbc:h2:mem:point-project;MODE=MySQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
     password:
     driver-class-name: org.h2.Driver
