build: H2 RDB 멀티 모듈 공용 사용 옵션 추가
- server mode로 활용

--- a/point-worker/src/main/resources/application.yml
+++ b/point-worker/src/main/resources/application.yml
@@ -8,6 +8,6 @@ spring:
       - aws-sqs
       - redis
     group:
-      local: db-local,port-local,aws-sqs-consumer-local,redis-local
+      local: db-local-worker,port-local,aws-sqs-consumer-local,redis-local
       test: db-test
     active: local
