--- a/point-core/src/main/resources/application-db.yml
+++ b/point-core/src/main/resources/application-db.yml
@@ -22,7 +22,8 @@ spring:
     activate:
       on-profile: db-local,db-test
   datasource:
-    url: jdbc:h2:mem:point-project;MODE=MySQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+#    url: jdbc:h2:mem:point-project;MODE=MySQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:./h2/point-project;MODE=MySQL;AUTO_SERVER=TRUE;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -33,4 +34,22 @@ spring:
   h2:
     console:
       enabled: true
+
+---
+spring:
+  config:
+    activate:
+      on-profile: db-local-worker
+  datasource:
+    url: jdbc:h2:./h2/point-project;MODE=MySQL;AUTO_SERVER=TRUE;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  h2:
+    console:
+      enabled: false
 
