feat: 멤버의 포인트 적립/사용 내역 조회 기능(페이징 가능, sort 방어 로직)
- 사용 취소 조회 로직 적용 X

--- a/point-api/src/main/resources/application.yml
+++ b/point-api/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
       - server-port
       - aws-sqs
       - redis
+      - web
     group:
-      local: db-local,port-local,aws-sqs-producer-local,redis-local
+      local: db-local,port-local,aws-sqs-producer-local,redis-local,web-local
       test: db-test
     active: local
