feat: point-api 포인트 사용 구현 (DB Point update & send message)

--- a/clients/aws-sqs/src/main/resources/application-aws-sqs.yml
+++ b/clients/aws-sqs/src/main/resources/application-aws-sqs.yml
@@ -26,12 +26,15 @@ sqs:
         maxReceiveCount: 5
     -
       name: 'point-cache'
+    -
+      name: 'point-redeem'
 aws:
   sqs:
     queue:
       point-earn: 'point-earn'
       point-earn-dlq: 'point-earn-dlq'
       point-cache: 'point-cache'
+      point-redeem: 'point-redeem'
 ---
 spring:
   config:
@@ -50,3 +53,4 @@ aws:
       point-earn: 'point-earn'
       point-earn-dlq: 'point-earn-dlq'
       point-cache: 'point-cache'
+      point-redeem: 'point-redeem'
