feat: point-api 포인트 사용 취소 (실제 DB 빠른 반영 후 worker 메세지 전송)

--- a/clients/aws-sqs/src/main/resources/application-aws-sqs.yml
+++ b/clients/aws-sqs/src/main/resources/application-aws-sqs.yml
@@ -28,6 +28,8 @@ sqs:
       name: 'point-cache'
     -
       name: 'point-redeem'
+    -
+      name: 'point-cancel'
 aws:
   sqs:
     queue:
@@ -35,6 +37,8 @@ aws:
       point-earn-dlq: 'point-earn-dlq'
       point-cache: 'point-cache'
       point-redeem: 'point-redeem'
+      point-cancel: 'point-cancel'
+
 ---
 spring:
   config:
@@ -54,3 +58,4 @@ aws:
       point-earn-dlq: 'point-earn-dlq'
       point-cache: 'point-cache'
       point-redeem: 'point-redeem'
+      point-cancel: 'point-cancel'
