build: ./gradle 실행 가능 추가

--- a/point-api/build.gradle
+++ b/point-api/build.gradle
@@ -1,5 +1,9 @@
 description("point-api module")
 
+bootJar {
+    duplicatesStrategy = 'exclude'
+}
+
 dependencies {
     implementation(project(":point-core"))
     implementation(project(":clients:aws-sqs"))
